--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,13 +4,13 @@ providers = ["node"]
 NODE_ENV = "production"
 
 [phases.setup]
-cmds = ["cd server"]
+cmds = ["cd client"]
 
 [phases.install]
-cmds = ["cd server && npm ci"]
+cmds = ["cd client && npm ci"]
 
 [phases.build]
-cmds = ["cd server && npm run build"]
+cmds = ["cd client && npm run build"]
 
 [phases.start]
-cmd = "cd server && npm run start:prod"
+cmd = "cd client && npm run start"
