refactor: update client configuration and scripts for improved environment handling

--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -3,11 +3,11 @@ providers = ["node"]
 [variables]
 NODE_ENV = "production"
 
+[phases.install]
+cmds = ["npm ci"]
+
 [phases.build]
-cmds = [
-  "npm ci",
-  "npm run build"
-]
+cmds = ["npm run build"]
 
 [phases.start]
 cmd = "npm run start"
