fix: update installation commands in nixpacks.toml and package.json to use npm install

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ providers = ["node"]
 NODE_ENV = "production"
 
 [phases.install]
-cmds = ["cd client && npm ci"]
+cmds = ["cd client && npm install"]
 
 [phases.build]
 cmds = ["cd client && npm run build"]
