Revert "refactor: update client configuration and scripts for improved environment handling"
This reverts commit d32c07e3d1c4f8c252b2387ae1f994e5063ede26.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,6 +3,9 @@ providers = ["node"]
 [variables]
 NODE_ENV = "production"
 
+[phases.setup]
+cmds = ["cd client"]
+
 [phases.install]
 cmds = ["cd client && npm ci"]
 
