--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -4,7 +4,7 @@ providers = ["node"]
 NODE_ENV = "production"
 
 [phases.install]
-cmds = ["npm install"]
+cmds = ["npm ci"]
 
 [phases.build]
 cmds = ["npm run build"]
